# persona

./: .env.example  .gitignore  README.md  chat_cli.py  pyproject.toml
.claude/: settings.local.json
chat/: admin.py  models.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/services/: learning.py  ollama_client.py  prompt_builder.py
config/: settings.py
